# sb-utilities

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/sb_utilities/: general_utils.py
tests/: __init__.py  test_general_utils.py
